Updated Gini Excercises.

--- a/Gini_Inclass/QuickGini.ipynb
+++ b/Gini_Inclass/QuickGini.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from __future__ import division, print_function, unicode_literals\n",
@@ -12,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -29,8 +31,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate Gini from set "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -42,9 +51,138 @@
     }
    ],
    "source": [
-    "Fl = [f/sum(L) for f in L]\n",
-    "Gini = sum([f*(1-f) for f in Fl])\n",
+    "Fi = [f/sum(L) for f in L]\n",
+    "Gini = sum([f*(1-f) for f in Fi])\n",
     "print (Gini)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Calculate Entropy from set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.3198076417940654\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fi = [f/sum(L) for f in L]\n",
+    "Ent = sum([-1*f*math.log(f,2) for f in Fi])\n",
+    "print (Ent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculate Information Gain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36127\n"
+     ]
+    }
+   ],
+   "source": [
+    "Left = [5013, 541, 4435, 1153, 5006, 2965, 4393, 5342, 2795, 4484]\n",
+    "print (sum(Left))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8804541791208823\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fi = [f/sum(Left) for f in Left]\n",
+    "LGini = sum([f*(1-f) for f in Fi])\n",
+    "print (LGini)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "19783\n"
+     ]
+    }
+   ],
+   "source": [
+    "Right = [451, 5755, 1155, 4554, 490, 2062, 1076, 475, 2639, 1126]\n",
+    "print (sum(Right))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8224073741673256\n"
+     ]
+    }
+   ],
+   "source": [
+    "Fi = [f/sum(Right) for f in Right]\n",
+    "RGini = sum([f*(1-f) for f in Fi])\n",
+    "print (RGini)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.8585330930759342\n",
+      "Information Gain =  0.04117062758733103\n"
+     ]
+    }
+   ],
+   "source": [
+    "SplitGini = LGini*(sum(Left)/sum(L))+RGini*(sum(Right)/sum(L))\n",
+    "print (SplitGini)\n",
+    "print(\"Information Gain = \", Gini - SplitGini)"
    ]
   },
   {
